# mcp-server-hai

./: .gitignore  Makefile  README.md  api_driver.py  bundle_type.csv  cline_mcp_settings.json.example  pyproject.toml  server.py  utils.py
src/mcp_server_hai/: server.py
