[project]
name = "mcp-server-hai"
version = "1.2.3"
description = "A MCP server implementation for HAI (Hyper Application Inventor) services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build>=1.2.2.post1",
    "mcp[cli]>=1.6.0",
    "tencentcloud-sdk-python-hai>=3.0.1357",
    "twine>=6.1.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
mcp-server-hai = "mcp_server_hai.server:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_server_hai = ["bundle_type.csv"]
